[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "agent-ood-gym"
description = "agent-ood-gym: Compositive gym environments for out-of-distribution detection for LLM agents based on BrowserGym"
authors = [
    {name = "Weichen Zhang"},
]
readme = "README.md"
requires-python = ">3.7"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]
version="0.1.0"
dependencies = [
    "browsergym-core==0.1.0",
    "browsergym-miniwob==0.1.0",
    "browsergym-webarena==0.1.0",
    "browsergym-visualwebarena==0.1.0",
    "browsergym-assistantbench==0.1.0",
    "browsergym-experiments==0.1.0",
    "browsergym-workarena>=0.4.1",
]

[tool.setuptools]
packages = []  # meta distribution, packages are included as dependencies
