[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "embodiedgym"
description = "EmbodiedGym: a gym environment for embodied task automation in the simulated world"
authors = [
    {name = "Weichen Zhang", email = "rowingchenn@berkeley.edu"}
]
readme = "README.md"
requires-python = ">3.7"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]
version="0.1.0"
dependencies = [
    "embodiedgym-core==0.1.0",
    "embodiedgym-experiments==0.1.0",
    "embodiedgym-alfworld==0.1.0",
]

[tool.setuptools]
packages = []  # meta distribution, packages are included as dependencies
